<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.nammapustaka.fragments.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.nammapustaka.fragments.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_forgot"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.nammapustaka.fragments.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.nammapustaka.fragments.auth.ForgotPasswordFragment"
        android:label="Forgot"
        tools:layout="@layout/fragment_forgot_password" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.nammapustaka.fragments.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/bookCatalogFragment"
        android:name="com.example.nammapustaka.fragments.BookCatalogFragment"
        android:label="@string/book_catalog"
        tools:layout="@layout/fragment_book_catalog">
        <action
            android:id="@+id/action_catalog_to_detail"
            app:destination="@id/bookDetailFragment" />
        <action
            android:id="@+id/action_catalog_to_addEdit"
            app:destination="@id/addEditBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.example.nammapustaka.fragments.BookDetailFragment"
        android:label="@string/book_details"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="bookId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/addEditBookFragment"
        android:name="com.example.nammapustaka.fragments.AddEditBookFragment"
        android:label="@string/add_book"
        tools:layout="@layout/fragment_add_edit_book">
        <argument
            android:name="bookId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/issueReturnFragment"
        android:name="com.example.nammapustaka.fragments.IssueReturnFragment"
        android:label="@string/scan_qr"
        tools:layout="@layout/fragment_issue_return" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.example.nammapustaka.fragments.TransactionsFragment"
        android:label="@string/transaction_history"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/overdueFragment"
        android:name="com.example.nammapustaka.fragments.OverdueFragment"
        android:label="@string/overdue_books"
        tools:layout="@layout/fragment_overdue" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.example.nammapustaka.fragments.ReportsFragment"
        android:label="@string/student_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/leaderboardFragment"
        android:name="com.example.nammapustaka.fragments.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/reservedFragment"
        android:name="com.example.nammapustaka.fragments.ReservedFragment"
        android:label="@string/reserved_books"
        tools:layout="@layout/fragment_reserved" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.nammapustaka.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
